<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/small_padding">

        <ImageButton
            android:id="@+id/prev_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/left"
            android:background="@android:color/transparent"
            android:padding="@dimen/button_padding"
            android:contentDescription="@string/button_prev_day"
            android:onClick="buttonPrevDayClick"/>

        <ImageButton
            android:id="@+id/next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/right"
            android:background="@android:color/transparent"
            android:padding="@dimen/button_padding"
            android:contentDescription="@string/button_next_day"
            android:onClick="buttonNextDayClick"/>

        <TextView
            android:id="@+id/currency_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/prev_day"
            app:layout_constraintEnd_toStartOf="@id/next_day"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:text="@string/textview_currency_title"
            android:onClick="headerClick"/>

        <TextView
            android:id="@+id/currency_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/prev_day"
            app:layout_constraintEnd_toStartOf="@id/next_day"
            app:layout_constraintTop_toBottomOf="@id/currency_title"
            app:layout_constraintBottom_toTopOf="@id/currency_notes"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:text="@string/textview_currency_date_placeholder"
            android:onClick="headerClick"/>

        <TextView
            android:id="@+id/currency_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/prev_day"
            app:layout_constraintEnd_toStartOf="@id/next_day"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/textview_currency_notes"
            android:onClick="headerClick"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>